tests/deploy_errors/pipeline_not_found/error.txt
Error: 
    1 | deploy broken from snot::badger
      |                    ^^^^^^^^^^^^ Artefact used in `from` is not defined or not found: snot::badger
